--- a/style.css
+++ b/style.css
@@ -8,13 +8,12 @@
 }
 body {
   font-size: 1.6rem;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 }
 
 .cont {
-  width: 100%;
-  height: 100%;
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -25,4 +24,13 @@ body {
   font-size: 6rem;
   color: rgb(136, 20, 20);
   transform: rotate(-45deg);
+}
+.login {
+  height: 100vh;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(0, 110, 255);
+  color: floralwhite;
 }
